pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: test-pod
  namespace: default
  labels:
    app: test-service
    stage: development
spec:
  containers:
    - name: service
      image: nginx
      ports: 
        - containerPort: 80
