service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: LoadBalancer
  selector:
    app: test-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
